Srushti: Dentalstories About us page Dr about sec update

--- a/about-us.html
+++ b/about-us.html
@@ -178,7 +178,7 @@
               <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                  <div class="sb-contact-section">
                     <nav aria-label="breadcrumb">
-                        <h4 class="sb-sub-h4 wow fadeIn ds-a text-white" data-wow-duration="2s" data-wow-delay=".5ms">We would love to be the reason <br> behind your smile.</h4>
+                        <h4 class="sb-sub-h4 wow fadeIn cmw-a text-white" data-wow-duration="2s" data-wow-delay=".5ms">We would love to be the reason <br> behind your smile.</h4>
                         <!-- <h2 class="sb-sub-h2 wow fadeIn" data-wow-duration="2s" data-wow-delay=".5ms">WE WOULD LOVE TO BE THE REASON BEHIND YOUR SMILE. </h2> -->
                     </nav>
                  </div>
@@ -214,29 +214,91 @@
         </div>
 
      </div> -->
-
-
-<div class="ab-3s">
-    <div class="container">
-        <div class="row mainrow1">
-            <div class="col-lg-6 main-col1 ab2">
-
+     
+<div class="asdrp-1">
+   <h2 class="ab-4s-1 align-items-center text-center"> <span>The Auther to Your Dental Stories</h2>
+   <div class="container">
+            <div class="row align-items-center asdrp-r">
+               <div class="col-lg-6 col-md-10 order-2 order-md-1 mt-4 pt-2 mt-sm-0 opt-sm-0">
+                  <div class="row align-items-center">
+                     <div class="col-lg-10 col-md-6 col-12">
+                        <div class="row">
+                           <div class="col-lg-12 col-md-12 mt-4 pt-2">
+                                 <div class="card work-desk rounded border-0 overflow-hidden">
+                                    <img src="assets/images/Poonam__2.png" class="img-fluid" alt="Image" />
+                                    <div class="img-overlay bg-dark"></div>
+                                 </div>
+                           </div>
+                           <!--end col-->      
+                        </div>
+                        <!--end row-->
+                     </div>
+                     <!--end col-->    
+                  </div>
+                  <!--end row-->
+               </div>
+               <!--end col-->
+      
+               <div class="col-lg-6 col-md-12 col-12 order-1 order-md-2">
+                  <div class="section-title ml-lg-5">
+                     <!-- <h5 class="text-custom font-weight-normal mb-3">About Us</h5>. -->
+                     <h2 class="ab-th1 text-custom mb-3">Dr. Poonam Sarda</h2>
+                     <p class="ab-th2 asdrp-p text-muted mb-0">She obtained her B.D.S. degree in 2016, followed by the successful completion of her M.D.S. 
+                        degree in Conservative Dentistry and Endodontics, where she was honored with a silver medal from Maharashtra University of Health Sciences. 
+                        Her expertise lies in minimally invasive treatment within the field of specialization. With a rich experience of 7 years in clinical dentistry, 
+                        her primary focus is on delivering pain-free dental care. Dr. Sarda specializes in root canal treatment, anterior diastema closure using 
+                        composites, and various tooth-colored restorations.</p>
+                  </div>
+               </div>
+               <!--end col-->
             </div>
-            <div class="col-lg-6 maincol2 ab1">
-                <h2 class="ab-th1">Team of dental professionals who really care about your smile</h2>
-                <p class="ab-th2 ds-a">We have always noticed that people don’t visit the dentist unless they “really have to”. We, being students 
-                  of science, observed what lack of care and ignorance can do to oral health. Thus, we started Dental Stories with the aim of 
-                  educating and providing services for oral health. We believe each one of us has stories, and we just want you to tell your stories
-                  to the world with the brightest smiles.</p>
-                  <a href="service">
-                     <button class="button-btn mt-4">EXPERIENCE DENTAL EXCELLENCE
-                        <span><i class="fas fa-angle-double-right"></i></span>
-                     </button>
-                  </a>
-            </div>
-        </div>
-    </div>
+            <!--enr row-->
+   </div>
 </div>
+
+<div class="asdrj-1">
+   <div class="container">
+            <div class="row align-items-center asdrj-r">      
+               <div class="col-lg-6 col-md-12 col-12 order-1 order-md-1">
+                  <div class="section-title ml-lg-5">
+                     <!-- <h5 class="text-custom font-weight-normal mb-3">About Us</h5>. -->
+                     <h2 class="ab-th1 text-custom mb-3">Dr. Jenish Parmar</h2>
+                     <p class="ab-th2 asdrp-p text-muted mb-0">He has a strong background in root canal therapy. 
+                        Dr. Jenish Parmar has a BDS degree, an MDS in Endodontics, and an exceptional scholastic history. He also holds 
+                        an MDS in Endodontics. Dr. Jenish Parmar specializes in endodontics, which is the study, diagnosis, and treatment 
+                        of dental diseases affecting the tooth pulp and its surrounding tissues. He can carry out difficult root canal 
+                        treatments with accuracy and efficiency because to his specialized training and expertise. Because of his love 
+                        for the discipline of endodontics and commitment to his patients, Dr. Jenish Parmar is a respected expert in the 
+                        area. He regularly provides top-notch treatment with accuracy and competence, whether it's detecting and treating 
+                        dental diseases or carrying out challenging root canal surgeries.</p>
+                  </div>
+               </div>
+               <!--end col-->
+
+               <div class="col-lg-6 col-md-6 order-2 order-md-2 mt-4 pt-2 mt-sm-0 opt-sm-0">
+                  <div class="row align-items-center">
+                     <div class="col-lg-10 col-md-10 col-12">
+                        <div class="row">
+                           <div class="col-lg-12 col-md-12 mt-4 pt-2">
+                                 <div class="card work-desk rounded border-0 overflow-hidden">
+                                    <img src="assets/images/jenish_2.png" class="img-fluid" alt="Image" />
+                                    <div class="img-overlay bg-dark"></div>
+                                 </div>
+                           </div>
+                           <!--end col-->      
+                        </div>
+                        <!--end row-->
+                     </div>
+                     <!--end col-->    
+                  </div>
+                  <!--end row-->
+               </div>
+               <!--end col-->
+            </div>
+            <!--enr row-->
+   </div>
+</div>
+
 
 <div class="quote-box">
     <div class="box">
@@ -253,7 +315,7 @@
         <div class="row ab-row4">
             <div class="col-lg-6 main-ab4-1">
                 <h2 class="ab-4s-1"> <span>Your dental health </span> <br>Our priority</h2>
-                <p class="ab-4s-2 ds-a px-2 pb-5">Everyone who enters our doors will benefit from improved oral health and general wellbeing. 
+                <p class="ab-4s-2 px-2 pb-5">Everyone who enters our doors will benefit from improved oral health and general wellbeing. 
                   We are here to assist you because we believe in the power of a radiant, healthy smile. Whether you need simple 
                   restoration procedures or more involved preventative care, our knowledgeable dentists and staff have the skills, 
                   experience, and cutting-edge equipment to produce excellent outcomes. </p>
